[package]
name = "cops"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
no_std = []

[dependencies]
crossbeam = { version = "0.8.4", default-features = false, features = [
    "alloc",
] }
log = "0.4"
buddy_system_allocator = "0.11"
spin = "0.10"
spinlock = "0.1.2"
cfg-if = "1.0"
